<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/about_topBar"
                style="@style/ToolBar"
                app:navigationContentDescription="@string/navigate_back"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/about" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorBackground">

            <com.google.android.material.card.MaterialCardView
                style="@style/CardView.FullScreen"
                tools:ignore="MissingConstraints">

                <ScrollView
                    android:id="@+id/about_scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/about_constraint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/layoutPaddingFullScreen">

                        <TextView
                            android:id="@+id/about_title_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textColor="?attr/colorAccent"
                            android:textSize="50sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/about_developer_tv"
                            style="@style/About.Info.TextView"
                            android:layout_marginTop="24dp"
                            android:text="@string/about_by_name"
                            app:layout_constraintTop_toBottomOf="@+id/about_title_tv" />

                        <TextView
                            android:id="@+id/about_version_tv"
                            style="@style/About.Info.TextView"
                            android:text="@string/about_version"
                            app:layout_constraintTop_toBottomOf="@+id/about_developer_tv" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/about_changelog_mb"
                            style="@style/About.Info.Button"
                            android:text="@string/about_changelog"
                            app:layout_constraintTop_toBottomOf="@+id/about_version_tv" />

                        <TextView
                            android:id="@+id/spacer1"
                            style="@style/About.Spacer"
                            app:layout_constraintTop_toBottomOf="@+id/about_changelog_mb" />

                        <androidx.core.widget.NestedScrollView
                            android:id="@+id/about_changelog_sv"
                            style="@style/About.NestedScrollView"
                            app:layout_constraintTop_toBottomOf="@+id/spacer1">

                            <TextView
                                android:id="@+id/about_changelog_tv"
                                style="@style/About.NestedScrollView.ChildTextView"
                                app:file="@{`Changelog.txt`}" />
                        </androidx.core.widget.NestedScrollView>

                        <TextView
                            android:id="@+id/spacer2"
                            style="@style/About.Spacer"
                            app:layout_constraintTop_toBottomOf="@+id/about_changelog_sv" />

                        <TextView
                            android:id="@+id/about_app_github_tv"
                            style="@style/About.Info.TextView"
                            android:layout_marginTop="0dp"
                            app:layout_constraintTop_toBottomOf="@+id/spacer1"
                            app:link="@{@string/app_github_link}"
                            tools:text="Github" />

                        <TextView
                            android:id="@+id/about_thanks_tv"
                            style="@style/About.Info.TextView"
                            android:text="@string/about_special_thanks"
                            app:layout_constraintTop_toBottomOf="@+id/about_app_github_tv" />

                        <TextView
                            android:id="@+id/about_contact_tv"
                            style="@style/About.Info.TextView"
                            android:text="@string/about_contact_me"
                            app:layout_constraintTop_toBottomOf="@+id/about_thanks_tv" />

                        <TextView
                            android:id="@+id/about_email_tv"
                            style="@style/About.Info.TextView"
                            app:layout_constraintTop_toBottomOf="@+id/about_contact_tv"
                            app:link="@{@string/about_email_link}"
                            tools:text="heyzeusvapps@gmail.com" />

                        <TextView
                            android:id="@+id/about_translate_tv"
                            style="@style/About.Info.TextView"
                            android:text="@string/about_translation_warning"
                            app:layout_constraintTop_toBottomOf="@+id/about_email_tv" />

                        <TextView
                            android:id="@+id/about_libraries_tv"
                            style="@style/About.Info.TextView"
                            android:layout_marginTop="24dp"
                            android:text="@string/about_external_libraries"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@+id/about_translate_tv" />

                        <TextView
                            android:id="@+id/about_ci_tv"
                            style="@style/About.Info.TextView"
                            android:text="@string/library_circleindicator"
                            app:layout_constraintTop_toBottomOf="@+id/about_libraries_tv" />

                        <TextView
                            android:id="@+id/about_ci_git_tv"
                            style="@style/About.Info.TextView"
                            app:layout_constraintTop_toBottomOf="@+id/about_ci_tv"
                            app:link="@{@string/library_circleIndicator_github}"
                            tools:text="Github" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/about_ci_mb"
                            style="@style/About.Info.Button"
                            android:text="@string/about_license"
                            app:layout_constraintTop_toBottomOf="@+id/about_ci_git_tv" />

                        <TextView
                            android:id="@+id/spacer3"
                            style="@style/About.Spacer"
                            app:layout_constraintTop_toBottomOf="@+id/about_ci_mb" />

                        <androidx.core.widget.NestedScrollView
                            android:id="@+id/about_ci_sv"
                            style="@style/About.NestedScrollView"
                            app:layout_constraintTop_toBottomOf="@+id/spacer3">

                            <TextView
                                android:id="@+id/about_ci_license_tv"
                                style="@style/About.NestedScrollView.ChildTextView"
                                app:file="@{`CircleIndicatorLicense.txt`}" />
                        </androidx.core.widget.NestedScrollView>

                        <TextView
                            android:id="@+id/spacer4"
                            style="@style/About.Spacer"
                            app:layout_constraintTop_toBottomOf="@id/about_ci_sv" />

                        <TextView
                            android:id="@+id/about_mpc_tv"
                            style="@style/About.Info.TextView"
                            android:text="@string/library_mpandroidchart"
                            app:layout_constraintTop_toBottomOf="@+id/spacer3" />

                        <TextView
                            android:id="@+id/about_mpc_git_tv"
                            style="@style/About.Info.TextView"
                            app:layout_constraintTop_toBottomOf="@+id/about_mpc_tv"
                            app:link="@{@string/library_mpandroidchart_github}"
                            tools:text="Github" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/about_mpc_mb"
                            style="@style/About.Info.Button"
                            android:text="@string/about_license"
                            app:layout_constraintTop_toBottomOf="@+id/about_mpc_git_tv" />

                        <TextView
                            android:id="@+id/spacer5"
                            style="@style/About.Spacer"
                            android:visibility="gone"
                            app:layout_constraintTop_toBottomOf="@+id/about_mpc_mb" />

                        <androidx.core.widget.NestedScrollView
                            android:id="@+id/about_mpc_sv"
                            style="@style/About.NestedScrollView"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/spacer5">

                            <TextView
                                android:id="@+id/about_mpc_license_tv"
                                style="@style/About.NestedScrollView.ChildTextView"
                                app:file="@{`MPAndroidChartLicense.txt`}" />
                        </androidx.core.widget.NestedScrollView>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </ScrollView>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>