...
    <string name="alert_dialog_create_account">Create Account</string>
    <string name="alert_dialog_edit_category">Edit Category</string>
    <string name="alert_dialog_create_category">Create Category</string>
    <string name="alert_dialog_delete_account">Delete Account</string>
    <string name="alert_dialog_delete_category">Delete Category</string>
    <string name="alert_dialog_delete_transaction">Delete Transaction</string>
    <string name="snackbar_exists">%1$s already exists!</string>
    <string name="alert_dialog_duplicate_symbols">Duplicate Symbols</string>
    <string name="alert_dialog_duplicate_symbols_warning">The thousands and decimal separators cannot be the same, would you like to switch them?</string>
    <string name="accounts">Accounts</string>
    <string name="account_new">New Account</string>
    <string name="category_new">New Category</string>
    <string name="cfl_menu_transaction">New Transaction</string>
    <string name="transaction_save">Save Transaction</string>
    <string name="transaction">Transaction</string>
    <string name="cfl_overview">Overview</string>
    <string name="cfl_drawer_description">Open Navigation Drawer</string>
...
