<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_layout"
        style="@style/TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alert_dialog_input_hint"
            android:inputType="text"
            android:maxLength="32" />
    </com.google.android.material.textfield.TextInputLayout>
</FrameLayout>